--- a/pages/forgetpassword.html
+++ b/pages/forgetpassword.html
@@ -4,78 +4,117 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Reset Password — We Are Eleven</title>
+
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="wae-colors.css">
+
+  <!-- Project styles -->
+  <link rel="stylesheet" href="../assets/css/wae-colors.css">
+
   <style>
     /* Small helper to keep form narrow on very small screens */
-    .form-wrap { max-width: 420px; margin-left: auto; margin-right: auto; }
+    .form-wrap {
+      max-width: 420px;
+      margin-left: auto;
+      margin-right: auto;
+    }
   </style>
 </head>
-<body class="bg-white text-[#0b1220]">
-  <!-- Header (keeps your existing header.js) -->
+
+<body class="bg-white text-[#0b1220] flex flex-col min-h-screen">
+
+  <!-- Shared Header -->
   <div id="site-header" class="wae-nav"></div>
 
-  <main class="py-20 px-6">
+  <main class="flex-grow py-20 px-6">
     <div class="wae-panel rounded-xl form-wrap">
       <h1 class="text-2xl font-bold mb-2">Forgot your password?</h1>
+
       <p class="wae-muted mb-4">
         Enter the email address associated with your account and we’ll send you a link to reset your password.
         Check your inbox (and spam) for the reset email.
       </p>
 
-      <form id="resetForm" class="space-y-4" autocomplete="on" aria-label="Password reset form">
-        <label for="email" class="block text-sm font-medium mb-1">Email</label>
-        <input id="email" name="email" type="email" placeholder="you@example.com" class="wae-input-light" required aria-required="true" />
+      <form
+        id="resetForm"
+        class="space-y-4"
+        autocomplete="on"
+        aria-label="Password reset form">
 
-        <button id="sendBtn" type="submit" class="wae-btn wae-btn-primary w-full">Send reset email</button>
+        <label for="email" class="block text-sm font-medium mb-1">
+          Email
+        </label>
+
+        <input
+          id="email"
+          name="email"
+          type="email"
+          placeholder="you@example.com"
+          class="wae-input-light"
+          required
+          aria-required="true" />
+
+        <button
+          id="sendBtn"
+          type="submit"
+          class="wae-btn wae-btn-primary w-full">
+          Send reset email
+        </button>
       </form>
 
       <p id="msg" class="text-center text-sm mt-4"></p>
 
       <div class="mt-4 text-center text-sm">
-        <a href="login.html" class="wae-link">Back to login</a>
+        <a href="../pages/login.html" class="wae-link">
+          Back to login
+        </a>
       </div>
     </div>
   </main>
 
-  <footer class="py-8 text-center wae-muted">© 2025 We Are Eleven</footer>
+  <footer class="py-8 text-center wae-muted">
+    © 2025 We Are Eleven
+  </footer>
 
+  <!-- Header + Firebase Logic -->
   <script type="module">
-    import { injectHeader } from "./header.js";
-    injectHeader("#site-header", { active: "Login" });
+    /* ---------- Shared Header ---------- */
+    import { injectHeader } from "../scripts/header.js";
+    injectHeader("#site-header", { active: "login" });
 
+    /* ---------- Firebase ---------- */
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
     import { getAuth, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
-    // Firebase config (same as your project)
     const firebaseConfig = {
       apiKey: "AIzaSyB0DaaYB1hZLY8h23QOpT7Ok4sX5ACkHTM",
       authDomain: "we-are-eleven.firebaseapp.com",
       projectId: "we-are-eleven",
     };
+
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    const resetForm = document.getElementById('resetForm');
-    const emailInput = document.getElementById('email');
-    const sendBtn = document.getElementById('sendBtn');
-    const msg = document.getElementById('msg');
+    const resetForm = document.getElementById("resetForm");
+    const emailInput = document.getElementById("email");
+    const sendBtn = document.getElementById("sendBtn");
+    const msg = document.getElementById("msg");
 
-    function setMessage(text, kind='info'){
+    function setMessage(text, kind = "info") {
       msg.textContent = text;
-      msg.className = 'text-center text-sm mt-4';
-      if(kind === 'success') msg.classList.add('wae-success');
-      if(kind === 'error') msg.classList.add('wae-error');
-      if(kind === 'info') msg.classList.add('wae-muted');
+      msg.className = "text-center text-sm mt-4";
+
+      if (kind === "success") msg.classList.add("wae-success");
+      if (kind === "error") msg.classList.add("wae-error");
+      if (kind === "info") msg.classList.add("wae-muted");
     }
 
-    resetForm.addEventListener('submit', async (e) => {
+    resetForm.addEventListener("submit", async (e) => {
       e.preventDefault();
-      setMessage('', 'info');
+      setMessage("", "info");
 
       const email = emailInput.value.trim();
-      if(!email){
-        setMessage('❌ Please enter your email address.', 'error');
+      if (!email) {
+        setMessage("❌ Please enter your email address.", "error");
         return;
       }
 
@@ -84,19 +123,21 @@
 
       try {
         await sendPasswordResetEmail(auth, email);
-        setMessage('✅ Password reset email sent. Check your inbox (and spam).', 'success');
-        // Optionally clear the input
-        emailInput.value = '';
-      } catch(err) {
-        console.error('Reset password error:', err);
-        // Friendly error messages for common Firebase codes
-        const code = err?.code || '';
-        if(code === 'auth/user-not-found'){
-          setMessage('❌ No account found with that email.', 'error');
-        } else if(code === 'auth/invalid-email') {
-          setMessage('❌ Invalid email address.', 'error');
+        setMessage(
+          "✅ Password reset email sent. Check your inbox (and spam).",
+          "success"
+        );
+        emailInput.value = "";
+      } catch (err) {
+        console.error("Reset password error:", err);
+        const code = err?.code || "";
+
+        if (code === "auth/user-not-found") {
+          setMessage("❌ No account found with that email.", "error");
+        } else if (code === "auth/invalid-email") {
+          setMessage("❌ Invalid email address.", "error");
         } else {
-          setMessage('❌ Could not send reset email. Try again later.', 'error');
+          setMessage("❌ Could not send reset email. Try again later.", "error");
         }
       } finally {
         sendBtn.disabled = false;
@@ -104,5 +145,6 @@
       }
     });
   </script>
+
 </body>
 </html>
