--- a/pages/login.html
+++ b/pages/login.html
@@ -4,99 +4,144 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Login — We Are Eleven</title>
+
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="wae-colors.css">
+
+  <!-- Project styles -->
+  <link rel="stylesheet" href="../assets/css/wae-colors.css">
 </head>
-<body class="bg-white text-[#0b1220]">
-  <!-- Header -->
+
+<body class="bg-white text-[#0b1220] flex flex-col min-h-screen">
+
+  <!-- Shared Header -->
   <div id="site-header" class="wae-nav"></div>
 
-  <main class="max-w-md mx-auto py-20 px-6">
+  <main class="flex-grow max-w-md mx-auto py-20 px-6">
     <div class="wae-panel rounded-xl">
       <h1 class="text-2xl font-bold mb-2">Welcome back</h1>
-      <p class="wae-muted mb-4">Login to access your profile, manage membership, and vote in polls.</p>
+      <p class="wae-muted mb-4">
+        Login to access your profile, manage membership, and vote in polls.
+      </p>
 
       <form id="loginForm" class="space-y-4" autocomplete="on">
-        <input id="email" type="email" placeholder="Email" class="wae-input-light" required />
-        <input id="password" type="password" placeholder="Password" class="wae-input-light" required />
-        <button id="loginBtn" class="wae-btn wae-btn-primary w-full" type="submit">Login</button>
+        <input
+          id="email"
+          type="email"
+          placeholder="Email"
+          class="wae-input-light"
+          required />
+
+        <input
+          id="password"
+          type="password"
+          placeholder="Password"
+          class="wae-input-light"
+          required />
+
+        <button
+          id="loginBtn"
+          class="wae-btn wae-btn-primary w-full"
+          type="submit">
+          Login
+        </button>
       </form>
 
       <div class="mt-4 flex items-center justify-between text-sm">
-        <a href="join.html" class="wae-link">Create account</a>
-        <a href="forgetpassword.html" id="forgotLink" class="wae-link">Forgot password?</a>
+        <a href="../pages/join.html" class="wae-link">
+          Create account
+        </a>
+        <a href="../pages/reset_password.html" id="forgotLink" class="wae-link">
+          Forgot password?
+        </a>
       </div>
 
       <p id="authMessage" class="text-center text-sm mt-4"></p>
     </div>
   </main>
 
-  <footer class="py-8 text-center wae-muted">© 2025 We Are Eleven</footer>
+  <footer class="py-8 text-center wae-muted">
+    © 2025 We Are Eleven
+  </footer>
 
   <script type="module">
-    import { injectHeader } from "./header.js";
-    injectHeader("#site-header", { active: "Login" });
+    /* ---------- Shared Header ---------- */
+    import { injectHeader } from "../scripts/header.js";
+    injectHeader("#site-header", { active: "login" });
 
+    /* ---------- Firebase Auth ---------- */
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import {
+      getAuth,
+      signInWithEmailAndPassword,
+      sendPasswordResetEmail
+    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyB0DaaYB1hZLY8h23QOpT7Ok4sX5ACkHTM",
       authDomain: "we-are-eleven.firebaseapp.com",
       projectId: "we-are-eleven",
     };
+
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    const loginForm = document.getElementById('loginForm');
-    const authMessage = document.getElementById('authMessage');
-    const loginBtn = document.getElementById('loginBtn');
+    const loginForm = document.getElementById("loginForm");
+    const authMessage = document.getElementById("authMessage");
+    const loginBtn = document.getElementById("loginBtn");
 
-    function setMessage(text, kind = 'info') {
+    function setMessage(text, kind = "info") {
       authMessage.textContent = text;
-      authMessage.className = 'text-center text-sm mt-4';
-      if (kind === 'error') authMessage.classList.add('wae-error');
-      if (kind === 'success') authMessage.classList.add('wae-success');
-      if (kind === 'info') authMessage.classList.add('wae-muted');
+      authMessage.className = "text-center text-sm mt-4";
+
+      if (kind === "error") authMessage.classList.add("wae-error");
+      if (kind === "success") authMessage.classList.add("wae-success");
+      if (kind === "info") authMessage.classList.add("wae-muted");
     }
 
-    loginForm.addEventListener('submit', async (e) => {
+    loginForm.addEventListener("submit", async (e) => {
       e.preventDefault();
-      setMessage('', 'info');
+      setMessage("", "info");
+
       loginBtn.disabled = true;
       loginBtn.style.opacity = 0.85;
 
-      const email = document.getElementById('email').value.trim();
-      const password = document.getElementById('password').value;
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value;
 
       try {
         await signInWithEmailAndPassword(auth, email, password);
-        setMessage('✅ Login successful. Redirecting...', 'success');
-        setTimeout(() => { window.location.href = 'profile.html'; }, 700);
+        setMessage("✅ Login successful. Redirecting...", "success");
+
+        setTimeout(() => {
+          window.location.href = "../pages/profile.html";
+        }, 700);
       } catch (err) {
-        console.error('Login error', err);
-        setMessage('❌ ' + (err.message || 'Login failed'), 'error');
+        console.error("Login error", err);
+        setMessage("❌ " + (err.message || "Login failed"), "error");
         loginBtn.disabled = false;
         loginBtn.style.opacity = 1;
       }
     });
 
-    // Forgot password handler
-    document.getElementById('forgotLink').addEventListener('click', async (ev) => {
+    // Forgot password shortcut
+    document.getElementById("forgotLink").addEventListener("click", async (ev) => {
       ev.preventDefault();
-      const email = document.getElementById('email').value.trim();
+
+      const email = document.getElementById("email").value.trim();
       if (!email) {
-        setMessage('❌ Enter your email above to reset password.', 'error');
+        setMessage("❌ Enter your email above to reset password.", "error");
         return;
       }
+
       try {
         await sendPasswordResetEmail(auth, email);
-        setMessage('✅ Password reset email sent. Check your inbox.', 'success');
+        setMessage("✅ Password reset email sent. Check your inbox.", "success");
       } catch (err) {
-        console.error('Reset error', err);
-        setMessage('❌ ' + (err.message || 'Could not send reset email'), 'error');
+        console.error("Reset error", err);
+        setMessage("❌ " + (err.message || "Could not send reset email"), "error");
       }
     });
   </script>
+
 </body>
 </html>
